[gd_scene load_steps=22 format=2]

[ext_resource path="res://minion-2020s2-fisica-2d-master/piso2.png" type="Texture" id=1]
[ext_resource path="res://minion-2020s2-fisica-2d-master/piso1.png" type="Texture" id=2]
[ext_resource path="res://Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Plataforma2.gd" type="Script" id=4]
[ext_resource path="res://Stage1.gd" type="Script" id=5]
[ext_resource path="res://Boxes.gd" type="Script" id=6]
[ext_resource path="res://minion-2020s2-fisica-2d-master/plataforma.png" type="Texture" id=7]
[ext_resource path="res://minion-2020s2-fisica-2d-master/punto_fijo2.png" type="Texture" id=8]
[ext_resource path="res://minion-2020s2-fisica-2d-master/cadena.png" type="Texture" id=9]
[ext_resource path="res://Vertical2.gd" type="Script" id=10]
[ext_resource path="res://Plataforma1.gd" type="Script" id=11]
[ext_resource path="res://AreaP2.gd" type="Script" id=12]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 252.787, 47.3072 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 284.396, 49.0957 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 237.921, 48.1461 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.994, 220.194 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 112.204, 7.50534 )

[sub_resource type="CircleShape2D" id=6]
radius = 15.1081

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 112.182, 7.25238 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 107.298, 5.81476 )

[node name="Stage1" type="Node2D"]
script = ExtResource( 5 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 47.2439, 552.399 )

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( 206.233, 0 )
scale = Vector2( 5.38793, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 206.552, 0 )
shape = SubResource( 1 )

[node name="Ground2" type="StaticBody2D" parent="."]
position = Vector2( 784.63, 549.221 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground2"]
position = Vector2( 206.233, 0 )
scale = Vector2( 5.38793, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2( 207.655, 1.05951 )
shape = SubResource( 1 )

[node name="Grass" type="StaticBody2D" parent="."]
position = Vector2( 0.984436, -0.0940857 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Grass"]
position = Vector2( 269.746, 457.137 )
scale = Vector2( 5.03117, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grass"]
position = Vector2( 221.632, 457.412 )
shape = SubResource( 2 )

[node name="Grass2" type="StaticBody2D" parent="."]
position = Vector2( 703.409, -0.62381 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Grass2"]
position = Vector2( 269.746, 457.137 )
scale = Vector2( 5.03117, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grass2"]
position = Vector2( 270.6, 459.048 )
shape = SubResource( 3 )

[node name="Boxes" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Box" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( 454.291, 385.101 )
contacts_reported = 2
contact_monitor = true

[node name="Box2" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( 73.2583, 384.705 )
collision_layer = 1
contacts_reported = 2
contact_monitor = true

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( -11.8189, 39.834 )

[node name="Sprite" type="Sprite" parent="Wall"]
position = Vector2( 0, 210.266 )
scale = Vector2( 1, 5.47373 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( -0.00100708, 172.874 )
shape = SubResource( 4 )

[node name="Balance" type="Node2D" parent="."]

[node name="Join1" type="Node2D" parent="Balance"]

[node name="Vertical1" type="GrooveJoint2D" parent="Balance/Join1"]
position = Vector2( 627.964, 389.954 )
node_a = NodePath("../Plataforma1")
node_b = NodePath("../Polea1")
length = 100.0

[node name="Sprite" type="Sprite" parent="Balance/Join1/Vertical1"]
position = Vector2( 2.4892, -127.423 )
scale = Vector2( 1, 1.32065 )
texture = ExtResource( 9 )

[node name="Plataforma1" type="RigidBody2D" parent="Balance/Join1" groups=[
"plataforma1",
]]
position = Vector2( 630, 405 )
mode = 2
mass = 4.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Balance/Join1/Plataforma1"]
position = Vector2( -8.21839, 8.67645 )
scale = Vector2( 0.624393, 0.474154 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balance/Join1/Plataforma1"]
position = Vector2( -8.1759, 9.11639 )
shape = SubResource( 5 )

[node name="Polea1" type="StaticBody2D" parent="Balance/Join1"]
position = Vector2( 630, 105.656 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Balance/Join1/Polea1"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balance/Join1/Polea1"]
shape = SubResource( 6 )

[node name="Join2" type="Node2D" parent="Balance"]

[node name="Plataforma2" type="RigidBody2D" parent="Balance/Join2"]
position = Vector2( 213.812, 263.43 )
mode = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Balance/Join2/Plataforma2"]
position = Vector2( -0.667389, 11.5081 )
scale = Vector2( 0.624393, 0.474154 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balance/Join2/Plataforma2"]
position = Vector2( -2.47885, 11.7672 )
shape = SubResource( 7 )

[node name="AreaP2" type="Area2D" parent="Balance/Join2/Plataforma2"]
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balance/Join2/Plataforma2/AreaP2"]
position = Vector2( 0.08951, 6.44882 )
shape = SubResource( 8 )

[node name="Polea2" type="StaticBody2D" parent="Balance/Join2"]
position = Vector2( 216.582, 106.801 )

[node name="Sprite" type="Sprite" parent="Balance/Join2/Polea2"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balance/Join2/Polea2"]
position = Vector2( 0.312531, -0.794724 )
shape = SubResource( 6 )

[node name="Vertical2" type="GrooveJoint2D" parent="Balance/Join2"]
position = Vector2( 213.962, 257.004 )
node_a = NodePath("../Polea2")
node_b = NodePath("../Plataforma2")
length = 10.0
initial_offset = 5.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Balance/Join2/Vertical2"]
position = Vector2( 1.77188, -51.3284 )
scale = Vector2( 1.2803, 0.775716 )
texture = ExtResource( 9 )

[node name="Portal" parent="." instance=ExtResource( 13 )]
position = Vector2( 955.745, 352.398 )
scale = Vector2( 0.5, 0.5 )
z_index = -2
[connection signal="pindown" from="Balance/Join2/Plataforma2" to="Balance/Join2/Vertical2" method="_on_Plataforma2_pindown"]
[connection signal="pull" from="Balance/Join2/Plataforma2" to="Balance/Join1/Plataforma1" method="_on_Plataforma2_pull"]
[connection signal="push" from="Balance/Join2/Plataforma2" to="Balance/Join1/Plataforma1" method="_on_Plataforma2_push"]
[connection signal="body_entered" from="Balance/Join2/Plataforma2/AreaP2" to="Balance/Join2/Plataforma2/AreaP2" method="_on_AreaP2_body_entered"]
[connection signal="body_exited" from="Balance/Join2/Plataforma2/AreaP2" to="Balance/Join2/Plataforma2/AreaP2" method="_on_AreaP2_body_exited"]
[connection signal="down" from="Balance/Join2/Plataforma2/AreaP2" to="Balance/Join2/Plataforma2" method="_on_AreaP2_down"]
[connection signal="pull" from="Balance/Join2/Plataforma2/AreaP2" to="Balance/Join1/Plataforma1" method="_on_AreaP2_pull"]
[connection signal="push" from="Balance/Join2/Plataforma2/AreaP2" to="Balance/Join1/Plataforma1" method="_on_AreaP2_push"]
